# tuples

./: .travis.yml  CMakeLists.txt  README.md  biicode.conf  test.cpp  tuples.hpp
src/: multi_assert.hpp  tuple.hpp  tuple_contains.hpp  tuple_forward.hpp  tuple_prune.hpp  tuple_template_forward.hpp  tuple_type_cat.hpp
test/: CMakeLists.txt  multi_assert.cpp  tuple_contains.cpp  tuple_forward.cpp  tuple_prune.cpp  tuple_template_forward.cpp  tuple_type_cat.cpp
